# carbon-pricing-calculator

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md
backend/: Dockerfile  pyproject.toml  render.yaml
backend/app/: __init__.py  main.py  schemas.py
backend/app/compute/: __init__.py  bau.py  caveats.py  monte_carlo.py  reduced_form.py
backend/app/data/: coefficients.db  references.db  scenarios.db
backend/app/db/: __init__.py  queries.py
backend/scripts/: build_data.py
backend/tests/: test_api_integration.py  test_bau.py  test_caveats.py  test_db.py  test_monte_carlo.py  test_reduced_form.py
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActionButtons.tsx  AdvancedPanel.tsx  CaveatsPanel.tsx  ChartPanel.tsx  CoefficientSelect.tsx  CrossCheckNote.tsx  ErrorBoundary.tsx  FanChart.tsx  Header.tsx  KPICards.tsx  LiteratureComparison.tsx  MethodologyAccordion.tsx  PricePathEditor.tsx  ScenarioCards.tsx  SliderControl.tsx  primitives.tsx
frontend/src/hooks/: useBackendData.ts  useScenarioState.ts
frontend/src/lib/: api.ts  json-export.ts  url-state.ts
frontend/src/store/: defaults.ts
frontend/src/types/: api.ts
